--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-streamlit==1.39.0
-torch==2.5.0
+torch==2.8.0
 torchvision==0.23.0
-torchaudio==2.5.0
-opencv-python==4.10.0.84
-gdown
+torchaudio==2.8.0
+streamlit==1.39.0
 numpy
 Pillow
-matplotlib==3.9.2
-scikit-learn==1.5.2
-
-
+opencv-python
+scikit-learn
+matplotlib
+rich
+markdown-it-py
+mdurl
+pygments
